#754 closed bug (fixed)
[glibc] gcc4 fails on wscoll.c
Reported by: | Owned by: | bonefish | |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | diver | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Compiling from Linux using GCC4 and hrev18540 the build fails on wscoll.c with invalid storage class on findidx. As this forms part of libroot (Which libbe depends on) very little is able to be built following this.
(Relevant) Compile log follows:
Cc generated/objects/haiku/x86/release/system/libroot/posix/glibc/wcsmbs/wcscoll.o In file included from src/system/libroot/posix/glibc/wcsmbs/../string/strcoll.c:101,
from src/system/libroot/posix/glibc/wcsmbs/wcscoll.c:37:
src/system/libroot/posix/glibc/wcsmbs/../string/../locale/weightwc.h: In function 'wcscoll': src/system/libroot/posix/glibc/wcsmbs/../string/../locale/weightwc.h:23: error: invalid storage class for function 'findidx' src/system/libroot/posix/glibc/wcsmbs/../string/../locale/weightwc.h:23: warning: no previous prototype for 'findidx'
Change History (7)
comment:1 by , 18 years ago
Cc: | added |
---|
comment:2 by , 18 years ago
Owner: | changed from | to
---|
comment:3 by , 18 years ago
comment:4 by , 18 years ago
Resolution: | → fixed |
---|
comment:5 by , 18 years ago
Status: | new → closed |
---|
comment:6 by , 18 years ago
hopefully fixed in revision 18549. Please check and change the state of the bug
...
Commit for glibc at http://sources.redhat.com/ml/glibc-cvs/2004-q3/msg01071.html appears to solve the problem, changing findidx functions from static to auto. Tested quickly here against GCC4 and works, but no idea how it will affect other versions.