updated these files to glibc 2.3.5 hopefully it should fix bug #754

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18549 a95241bf-73f2-0310-859d-f6bbb57e9c96